--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <application
         android:allowBackup="true"
@@ -11,7 +11,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.GestionApp"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".user.type.QuitterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user.type.CompteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user.type.ApplicationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user.type.GererActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user.type.AccueilActivity"
+            android:exported="false" />
         <activity
             android:name=".user.UserIndexActivity"
             android:exported="false"
@@ -30,7 +45,7 @@
             android:exported="false" />
         <activity
             android:name=".MainActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
