--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,15 @@
         android:theme="@style/Theme.GestionApp"
         tools:targetApi="31">
         <activity
+            android:name=".admin.type.CompteActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.type.ApplicationActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.type.GererActivity"
+            android:exported="false" />
+        <activity
             android:name=".user.type.QuitterActivity"
             android:exported="false" />
         <activity
