--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,14 @@
         android:theme="@style/Theme.GestionApp"
         tools:targetApi="31">
         <activity
+            android:name=".user.type.EnvoyerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".user.type.MessageActivity"
+            android:exported="false"
+            android:label="@string/title_activity_message"
+            android:theme="@style/Theme.GestionApp" />
+        <activity
             android:name=".admin.type.CompteActivity"
             android:exported="false" />
         <activity
