--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +14,27 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.GestionApp"
         tools:targetApi="31">
+        <activity
+            android:name=".admin.gerer.InformationUserActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.gerer.SupprimerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.gerer.AjouterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.gerer.ConsulterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.gerer.EnvoyerActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.type.GererActivity"
+            android:exported="false" />
+        <activity
+            android:name=".admin.type.MessageActivity"
+            android:exported="false" />
         <activity
             android:name=".user.type.EnvoyerActivity"
             android:exported="false" />
@@ -24,25 +47,7 @@
             android:name=".admin.type.CompteActivity"
             android:exported="false" />
         <activity
-            android:name=".admin.type.ApplicationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".admin.type.GererActivity"
-            android:exported="false" />
-        <activity
-            android:name=".user.type.QuitterActivity"
-            android:exported="false" />
-        <activity
             android:name=".user.type.CompteActivity"
-            android:exported="false" />
-        <activity
-            android:name=".user.type.ApplicationActivity"
-            android:exported="false" />
-        <activity
-            android:name=".user.type.GererActivity"
-            android:exported="false" />
-        <activity
-            android:name=".user.type.AccueilActivity"
             android:exported="false" />
         <activity
             android:name=".user.UserIndexActivity"
